    through 'auth_user'.
  * Created 'manager' user status: can edit users (only through 'auth'). <== TODO: Document
  * Created 'currency' brick to fetch openexchangerates.org exchange rates. <== TODO: Document
  * Do not render an older Ajax reply if a newer one has already been received. This fixes the
    live query confusion.
    
* Minor changes
  * Fixed gemspec to not include TextMate helper and selenium plugin.
  * Fixed xml generated file caching.
  * Added NODE_ID in 'redir' param on node creation (replaced by actual id). <== TODO: Document
  * Added fetch_html rubyless method to views (does an HTTP GET and returns body).
  * Fixed a bug in site alias zafu compilation (wrong home reference).
  * Fixed anchor in zazen url "":22#foo should link to anchor #foo in node '22'.
  * Prop eval returning nil for title properly replaces title with class name.
  * Type ctrl+return to enter a newline inside a grid.
  * Checking for defined accessors on links before passing to relation proxy (this enables custom code
    on relation modification without passing through RelationProxy).
  * Refuses to delete user node unless visitor is a manager.
  * Marks user as deleted and remove profile if node is destroyed.
  * Enable 'parent_id', 'project_id', 'section_id' Rubyless methods. <== TODO: Document
  * Fixed a critical bug related to changing a virtual class' superclass.
  * Do not trigger Ajax 'loading' unless it takes more then 300 ms (avoid blink).
  * Fixed tlabel on [input] when there is a default label (should overwride default).
  * Fixed "<p do='input'..." so that the "p" tag is preserved.
  * Using shift+enter to insert carriage return in grid.
  * Improved jobs display.
  * Fixed a cache handling bug where a page could exist in the filesystem without having a cache entry
    in the database.

== 1.2.6, 1.2.7 2013-08-16

* Major changes
  * Support for multiple domains (site alias) for a single site.
  * Added support for wkhtmltopdf (Thanks Jean-Baptiste).
  